--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Vazirmatn';
-  src: url('https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@33.003/misc/Farsi-Digits/Vazirmatn-FD-font-face.css') format('woff2-variations');
+  font-family: 'Vazirmatn FD';
+  src: url('https://unpkg.com/vazirmatn@33.0.3/misc/Farsi-Digits/Vazirmatn-FD-font-face.css') format('woff2-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
