--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Vazirmatn FD';
-  src: url('https://unpkg.com/vazirmatn@33.0.3/misc/Farsi-Digits/Vazirmatn-FD-font-face.css') format('woff2-variations');
+  src: url('/fonts/vazirmatn-fd/Vazirmatn-FD-font-face.css') format('woff2-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
